--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -152,9 +152,17 @@
     width: 40vw;
   }
 
+  .large {
+    padding: 25px 86px;
+  }
+
 }
 
 @media screen and (min-width:601px) and (max-width: 1024px) {
+  .large {
+    padding: 21px 64px;
+  }
+
   .circle {
     width: 60px;
     height: 60px;
@@ -205,12 +213,17 @@
   //ADD
   .button-add {
     font-size: 20px;
-    padding: 110px 0;
+    padding: 100px 0;
     width: auto;
   }
 }
 
 @media screen and (min-width:426px) and (max-width: 600px) {
+  .large {
+    padding: 25px 66px;
+    width: 100%;
+  }
+
   .circle {
     width: 65px;
     height: 65px;
@@ -250,7 +263,7 @@
   //ADD
   .button-add {
     font-size: 18px;
-    padding: 110px 0;
+    padding: 90px 0;
     width: auto;
   }
 }
@@ -301,7 +314,7 @@
   //ADD
   .button-add {
     font-size: 18px;
-    padding: 80px 0;
+    padding: 70px 0;
     width: auto;
   }
 }
@@ -356,7 +369,7 @@
   //ADD
   .button-add {
     font-size: 16px;
-    padding: 80px 0;
+    padding: 70px 0;
     width: auto;
   }
 
