--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,21 +66,7 @@
     <%= javascript_include_tag "controllers/progressBar", defer: true %>
 
     <!-- Cookie Consent -->
-    <script defer src="https://www.termsfeed.com/public/cookie-consent/4.2.0/cookie-consent.js" charset="UTF-8"></script> <!-- Ajout du defer -->
-    <script defer>
-      document.addEventListener('DOMContentLoaded', function () {
-        cookieconsent.run({
-          "notice_banner_type": "interstitial",
-          "consent_type": "express",
-          "palette": "light",
-          "language": "fr",
-          "page_load_consent_levels": ["strictly-necessary"],
-          "website_name": "Omniscient Design",
-          "website_privacy_policy_url": "https://omniscientdesign.fr/cookies"
-        });
-      });
-    </script>
-
+    <%= javascript_include_tag "controllers/cookies", defer: true %>
     <!-- Google Analytics (Consent-based) -->
     <script type="text/plain" data-cookie-consent="tracking" async src="https://www.googletagmanager.com/gtag/js?id=G-WVD06EPJC3"></script>
     <script type="text/plain" data-cookie-consent="tracking" defer>
@@ -93,6 +79,14 @@
   </head>
 
   <body class="<%= (cookies && cookies[:theme].presence || 'system') %> <%= 'no-scroll' if (controller_name == 'oeuvres' || controller_name == 'designers') && action_name == 'index' %>">
+    <div id="cookie-consent-banner" style="display:none;">
+      <div>
+        <p>Nous utilisons des cookies pour améliorer votre expérience. Acceptez-vous l'utilisation des cookies ?</p>
+        <button id="accept-cookies">Accepter</button>
+        <button id="decline-cookies">Refuser</button>
+      </div>
+    </div>
+
     <% if notice.present? %>
       <div class="alert" id="alert">
         <p><%= notice %></p>
