--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -228,7 +228,7 @@ body.dark {
   position: fixed;
   bottom: 0;
   width: 100%;
-  background-color: #333;
+  background-color: #f7f7f7;
   color: white;
   text-align: center;
   padding: 10px;
@@ -236,8 +236,9 @@ body.dark {
 }
 
 #cookie-consent-banner button {
-  background-color: #f1d600;
-  color: black;
+  background-color: $primary-color;
+  color: $secondary-color;
   padding: 5px 10px;
+  border: none;
   margin: 5px;
 }
