--- a/app/views/oeuvres/_oeuvre.html.erb
+++ b/app/views/oeuvres/_oeuvre.html.erb
@@ -199,7 +199,7 @@
         </p>
         <h1 class="title-card"><%= oeuvre.nom_oeuvre %></h1>
       </div>
-        <h2 class="title-description-reference">Notions</h2>
+        <h2 class="title-description-reference">Notion(s)</h2>
       <% if oeuvre.notions.any? %>
         <div class="notions-flex">
             <% oeuvre.notions.each do |notion| %>
